<resources>
    <string name="app_name">Week Planner</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="category">Category</string>
    <string name="tomorrow">Set on tomorrow</string>
    <string name="tomorrowAfter">After tomorrow</string>
    <string name="failed">Failed</string>
    <string name="completed">Completed</string>
    <string name="ok">Completed</string>

    <string-array name="date_range_array">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string-array name="priority_array">
        <item>Priority</item>
        <item>Not important</item>
        <item>Important</item>
        <item>Very important</item>
    </string-array>
</resources>
