<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="5dp"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorBackEdit"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBackEdit"
                android:hint="@string/title"
                android:inputType="text" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/colorPrimaryDark" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorBackEdit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/prioritySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/dayPicker"
                    android:layout_width="200dp"
                    android:layout_height="fill_parent"
                    android:background="#00B93030"
                    android:backgroundTint="#00FFFFFF"
                    android:text="Day"
                    android:textOff="@string/tomorrow"
                    android:textOn="@string/tomorrowAfter" />

                <TextView
                    android:id="@+id/editTime"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:ems="10"
                    android:hint="00:00"
                    android:inputType="time"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/colorPrimaryDark" />

    <EditText
        android:id="@+id/category_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category" />

</LinearLayout>